tests/ui/types/undefined_variable.ko
//@ compile-fail
//@ error-code: E0201
module undefined_var {
    meta { purpose: "Uses an undefined variable" }

    fn bad() -> Int {
        return x  //~ ERROR E0201
    }
}
